# podcast-client

./: .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.github/workflows/: ci_frontend.yml
apps/desktop/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/cef-host/: Cargo.toml
apps/desktop/cef-host/src/shared/: commands.rs
apps/desktop/scripts/: build-cef-host.mjs  build-cef-host.ps1  build-cef-host.sh  build-release.ps1  build-release.sh
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  README.md  tauri.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/src/: cef.rs  lib.rs  main.rs
apps/desktop/src/cef/: ExampleTestPanel.tsx  TestPanel.tsx  cefSession.ts  getCurrentGoogleUser.ts  logoutGoogle.ts  publishYoutubeMusic.ts  youtubePublishApi.ts
apps/desktop/src/styles/: global.css
apps/mobile/: .gitignore  capacitor.config.ts  index.html  package.json  tsconfig.json  vite.config.ts
apps/mobile/android/app/: build.gradle
apps/mobile/ios/App/App/: Info.plist
apps/mobile/ios/App/App.xcodeproj/: project.pbxproj
apps/mobile/src/: main.tsx
apps/web/: index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  frontend.tsx  telemetry-init.ts  telemetry.ts  vite-env.d.ts
apps/web/src/components/Button/: Button.module.css  Button.tsx
apps/web/src/components/Footer/: Footer.module.css  Footer.tsx
apps/web/src/components/InputField/: InputField.module.css  (+1 more)
apps/web/src/styles/: global.css
(+6 files in other folders)
